# rules_go_path

./: WORKSPACE
code/: BUILD.bazel  go.mod  main.go
